// Vitest Snapshot v1

exports[`Routes > definePath > types 1`] = `
{
  "_pieces": [
    "/profiles/",
    "",
  ],
  "_rawParamNames": [
    ":handle",
  ],
  "path": "/profiles/:handle",
}
`;

exports[`Routes > definePath > types 2`] = `
{
  "_pieces": [
    "/boom/",
    "/",
    "",
  ],
  "_rawParamNames": [
    ":pow",
    ":kaboom",
  ],
  "path": "/boom/:pow/:kaboom",
}
`;

exports[`Routes > definePath > types 3`] = `
{
  "_pieces": [
    "/foo/",
    "/",
    "",
  ],
  "_rawParamNames": [
    ":bar",
    "*",
  ],
  "path": "/foo/:bar/*",
}
`;

exports[`Routes > definePath > types 4`] = `
{
  "build": [Function],
  "id": "profile",
  "match": [Function],
  "path": "/profiles/:handle",
  "test": [Function],
  "toString": [Function],
}
`;

exports[`Routes > definePath > types 5`] = `
{
  "build": [Function],
  "id": "validWildcard",
  "match": [Function],
  "path": "/foo/:bar/*",
  "test": [Function],
  "toString": [Function],
}
`;

exports[`Routes > definePath > types 6`] = `
{
  "build": [Function],
  "id": "definedRoute",
  "match": [Function],
  "path": "/boom/:pow/:kaboom",
  "test": [Function],
  "toString": [Function],
}
`;
